k8s-pt-extract-light/graphdb-nifi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f lgpd-odb-grafana-latest.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: graphdb-nifi
  name: graphdb-nifi
spec:
  ports:
  - name: "8182"
    port: 8182
    targetPort: 8183
  - name: "8183"
    port: 8183
    targetPort: 8183
  - name: "7000"
    port: 7000
    targetPort: 7000
  - name: "3001"
    port: 3001
    targetPort: 3001
  - name: "2480"
    port: 2480
    targetPort: 2480
  - name: "5009"
    port: 5009
    targetPort: 5007
  selector:
    io.kompose.service: graphdb-nifi
status:
  loadBalancer: {}
