k8s-pt-extract-light/pontus-formio-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f lgpd-odb-grafana-latest.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pontus-formio
  name: pontus-formio
spec:
  ports:
  - name: "3005"
    port: 3005
    targetPort: 3005
  - name: "8085"
    port: 8085
    targetPort: 8085
  selector:
    io.kompose.service: pontus-formio
status:
  loadBalancer: {}
