k8s-pt-extract-light/pontus-postgrest-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f lgpd-odb-grafana-latest.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pontus-postgrest
  name: pontus-postgrest
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: pontus-postgrest
status:
  loadBalancer: {}
